# prototypes

./: .gitignore  README.md
JoesPrototypes/JamventDemoXCompile/: CMakeLists.txt  ChartWidget.cpp  ChartWidget.h  GraphWidget.cpp  GraphWidget.h  JamventDemoXCompile.cpp  JamventDemoXCompile.sln  LabeledDataWidget.cpp  LabeledInputWidget.cpp  LabeledInputWidget.h  MainWidget.cpp  MainWidget.h  MainWidget.ui  PlotAreaWidget.cpp  PlotAreaWidget.h  PushbuttonWidget.cpp  RedGreenWidget.cpp  RedGreenWidget.h  Theme.h  VLabelWidget.h  main.cpp
JoesPrototypes/JamventGui01/: JamventGui01.pro  mainwidget.cpp  mainwidget.h  mainwidget.ui
LinuxProject2/: CMakeLists.txt  LinuxProject2.sln  LinuxProject2.vgdbcmake  MainWindow.ui
MSxxx_Pi/: MSxxxx_I2C_Pi.cpp  MSxxxx_I2C_Pi.h  readValuesTest.cpp  readValuesTest2.cpp
SignalGen-test/RPi/: 20_20_500_12_15_System.txt  README.md  csvtest.py  csvtest_timingFix1.py  hardwarePWMTest_ramp.py  hardwarePWMTest_sine.py  hpwm_fromFile.c  test.txt
cppJamventSim/: .gitignore  CMakeLists.txt  Makefile
cppJamventSim/src/: CMakeLists.txt  StrTokenize.h
cppJamventSim/testing/: CMakeLists.txt  testConf.cpp
gasSimDev/: CMakeLists.txt  GassimLungs.cpp  GassimLungs.h  GassimModel.h  GassimNode.cpp  GassimPipe.cpp  GassimPipe.h  GassimReservoir.cpp  GassimSource.cpp  GassimVars.h  JamsimDbgPrint.cpp  JamsimDbgPrint.h  JamventSimModel.cpp  JamventSimModel.h  JamventSimModelRt.h  JamventSimTime.h  JamventTime.h  README.md
gasSimDev/testing/: CMakeLists.txt  TestOutFile.h  TimeSeries.h  TimeSeriesMod.h  TimeSeriesOutFile.h  gassimDev.sublime-workspace  test01.cpp  testLungsComp0.cpp  testLungsComp1.cpp  testLungsComp2.cpp  testLungsCompInf.cpp  testModel00.cpp  testModel01.cpp  testRes.cpp  testResPo2.cpp  testResSmall.cpp
gasSimDev/utils/: fmtstr.h
gasSimDev_Photon/: LICENSE  Makefile  README.md  gasSimDev_Photon.code-workspace  library.properties  project.properties
gasSimDev_Photon/src/: CMakeLists.txt  GassimLungs.cpp  GassimPipe.cpp  GassimReservoir.cpp  JamventSimModel.h
gasSimDev_Photon/testing/: ParseTestArgs.h  testConf.cpp
gasSimDev_Photon/utils/: StrTokenize.h
helloworld/: README.md  project.properties
helloworld/src/: helloworld.cpp  helloworld.ino
jamventProto/: .gitignore  CMakeLists.txt  jamventProto.sln  jamventProto.vgdbcmake
jamventProto/hwTests/: CMakeLists.txt  hwTests.cpp
jamventProto/i2cTests/: CMakeLists.txt  I2cTests.cpp
jamventProto/jamctrllib/: CMakeLists.txt  JamCtl.cpp  JamCtl.h  JamCtrlData.h  JamCtrlGasMix.cpp  JamCtrlGasMix.h  JamCtrlGasState.cpp  JamCtrlGasState.h  JamCtrlHw.cpp  JamCtrlHw.h  JamCtrlMgr.cpp  JamCtrlMgr.h  JamCtrlMgrBase.h  JamCtrlMgrInterface.h  JamCtrlSim.cpp  JamCtrlSim.h
jamventProto/jamhwlib/: CMakeLists.txt  Fpga.h  I2cADC128D818.cpp  I2cADC128D818.h  I2cAdcWithO2.cpp  I2cAdcWithO2.h  I2cGenericDev.cpp  I2cGenericDev.h  I2cMS5607.cpp  I2cMS5607.h  I2cMS5803.cpp  I2cMS5803.h  I2cMSxxx.cpp  I2cMSxxx.h  JamHw.cpp  JamHw.h  JamHwErrors.cpp  JamHwErrors.h  JamKnob.cpp  JamKnob.h  Speaker.cpp  Speaker.h  Valves.cpp  Valves.h  jamknob.h
jamventProto/jamvent/: MainWindow.cpp
jamventProto/jamventgui/: CMakeLists.txt  Config.json  MainCtrl.cpp  MainCtrl.h  MainWidget.cpp  MainWidget.h  main.cpp
jamventProto/jamventsimlib/: .gitignore  CMakeLists.txt  GassimConst.h  GassimConv.h  GassimLungs.cpp  GassimLungs.h  GassimModel.cpp  GassimModel.h  GassimNode.cpp  GassimNode.h  GassimPipe.cpp  GassimPipe.h  GassimReservoir.cpp  GassimReservoir.h  JamventSimModel.cpp  JamventSimModel.h  JamventSimModelRt.cpp  gassimDev.sublime-workspace
jamventProto/jamventsimlib/testing/: CMakeLists.txt  ParseArgs.h  ParseTestArgs.h  TimeSeriesPV.h  test00.cpp  testConf.cpp  testLungsComp0.cpp  testLungsCompInf.cpp  testModel00.cpp  testModel01.cpp  testModel02.cpp  testResPo2.cpp
jamventProto/testing/: CMakeLists.txt  TimeSeries.h  TimeSeriesPVO2.h  testCtrl01.cpp
jamventProto/utils/: fmtstr.h
jamvent_pressure_lib/: LICENSE  README.md  library.properties
jamvent_pressure_lib/src/: MSxxxx_I2C.cpp  MSxxxx_I2C.h
photonTestI2c/: CMakeLists.txt  I2cGenericDev.h  I2cMS5607.h  I2cMS5803.h  I2cMSxxx.h  photonTestI2c.cpp  photonTestI2c.sln  photonTestI2c.vgdbcmake
photonjamsim/: README.md  project.properties
photonjamsim/src/: GassimModel.h  crc4.cpp  (+34 more)
qt-proof-of-concept/: README.md
qtStarterApps/: macros.cmk
toyparticle01/: README.md  project.properties
(+328 files in other folders)
